src/test/ui/associated-types/associated-types-incomplete-object.stderr
error[E0191]: the value of the associated type `B` (from the trait `Foo`) must be specified
  --> $DIR/associated-types-incomplete-object.rs:23:26
   |
LL |     type B;
   |     ------- `B` defined here
...
LL |     let b = &42isize as &dyn Foo<A=usize>;
   |                          ^^^^^^^^^^^^^^^^ associated type `B` must be specified

error[E0191]: the value of the associated type `A` (from the trait `Foo`) must be specified
  --> $DIR/associated-types-incomplete-object.rs:26:26
   |
LL |     type A;
   |     ------- `A` defined here
...
LL |     let c = &42isize as &dyn Foo<B=char>;
   |                          ^^^^^^^^^^^^^^^ associated type `A` must be specified

error[E0191]: the value of the associated types `A` (from the trait `Foo`), `B` (from the trait `Foo`) must be specified
  --> $DIR/associated-types-incomplete-object.rs:29:26
   |
LL |     type A;
   |     ------- `A` defined here
LL |     type B;
   |     ------- `B` defined here
...
LL |     let d = &42isize as &dyn Foo;
   |                          ^^^^^^^
   |                          |
   |                          associated type `A` must be specified
   |                          associated type `B` must be specified

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0191`.
